# CiteGuard

./: .env.example  README.md  pyproject.toml  requirements.txt
citeguard/: cli.py  config.py  models.py
citeguard/agents/: orchestrator.py  pdf_indexer.py  verifier.py
citeguard/cache/: manager.py
citeguard/llm/: openrouter.py
citeguard/parsing/: citations.py  claims.py  manuscript.py
citeguard/pdf/: chunker.py  extractor.py
citeguard/reporting/: json_report.py  pdf_report.py
citeguard/retrieval/: api_embeddings.py  base.py  bm25.py  factory.py  local_embeddings.py
citeguard/tools/: metadata.py  retrieve.py  session.py  verdict.py
citeguard/web/: app.py
citeguard/web/templates/: index.html
docs/superpowers/plans/: 2026-05-20-citeguard-implementation.md  2026-05-20-citeguard-webui-implementation.md  2026-05-20-orchestrator-tests-implementation.md
docs/superpowers/specs/: 2026-05-20-citeguard-design.md  2026-05-20-citeguard-webui-design.md  2026-05-20-orchestrator-tests-design.md
examples/: config.example.yaml  sample_manuscript.md
tests/: conftest.py  test_config.py  test_models.py
tests/test_agents/: test_orchestrator.py  test_pdf_indexer.py  test_verifier.py
tests/test_cache/: test_manager.py
tests/test_llm/: test_openrouter.py
tests/test_parsing/: test_citations.py  test_claims.py  test_manuscript.py
tests/test_pdf/: test_extractor.py
tests/test_retrieval/: test_bm25.py  test_factory.py
tests/test_tools/: test_tools.py
tests/test_web/: test_app.py
