[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citeguard"
version = "0.1.0"
description = "Agentic academic citation verification system"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "python-docx>=1.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "PyYAML>=6.0.0",
    "tenacity>=8.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
citeguard = "citeguard.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
